fix views to generic template

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,10 @@
 <% meta :title => "Dashboard", :robots => "noindex" %>
-<% meta :robots => "nofollow" %>
 
 <h1>Dashboard</h1>
+
+<div class="alert alert-warning fade in">
+  <button data-dismiss="alert" class="close close-sm" type="button">
+      <i class="icon-remove"></i>
+  </button>
+  <strong>Nota!</strong> Por el momento solo los editores tienen acceso al resto de las características. Si conoces al administrador, solicita la categoria "editor" con tu nombre de usuario.
+</div>
