--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,10 +13,10 @@
                 <%= link_to image_tag("simpl-logo.png", alt: 'startupplace'), root_path, class: 'brand' %>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <%= nav_link 'Inicio', root_path %>
-                    	<%= nav_link 'News', news_index_path %>
-                        <%= nav_link 'ideaStartup', ideastartup_path %>
-                        <%= nav_link 'Sobre nosotros', about_path %>
+                        <%= nav_link 'Inicio', root_path, 'li' %>
+                    	<%= nav_link 'News', news_index_path, 'li' %>
+                        <%= nav_link 'ideaStartup', ideastartup_path, 'li' %>
+                        <%= nav_link 'Sobre nosotros', about_path, 'li' %>
                     </ul>
                 </div>
         </div>
