--- a/app/views/dashboard/news/index.html.erb
+++ b/app/views/dashboard/news/index.html.erb
@@ -1,17 +1,17 @@
  <% meta :title => "Artículos publicados", :robots => "noindex" %>
 
- <h1>All news</h1>
+ <h1>Mis artículos</h1>
  <ul>
  	<% if @news.each do |news| %>
- 		<li>
+ 		<ol>
  			<%= link_to news.title.html_safe, dashboard_news_path(news), class: 'newsItem', id: 'news_#{news_id}' %>
- 		</li>
+ 		</ol>
  	<% end.empty? %>
- 		<p>Sin resultados :(</p>
+ 		<p>Todavía no has publicado ningún artículo.</p>
  	<% end %>
  </ul>
 
-
+<hr/>
 <% if can? :create, News %>
-  <%= link_to "create new news", new_dashboard_news_path, class: 'newNews' %>
+  <%= link_to "Publicar nuevo artículo", new_dashboard_news_path, class: 'newNews' %>
 <% end %>
