--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -66,7 +66,7 @@
 							</span>
 							<span>
 								<i class="mini-ico-user"></i>
-								Por <%= link_to news.user.username, account_path(@news.user.username) %>
+								Por <%= link_to @news.user.username, account_path(@news.user.username) %>
 							</span>
 						</div>
 					</div>
