--- a/app/assets/stylesheets/dashboard/style.css.scss
+++ b/app/assets/stylesheets/dashboard/style.css.scss
@@ -53,6 +53,7 @@ a, a:hover, a:focus {
   -webkit-border-radius: 5px;
 }
 
+
 .form-signin h2.form-signin-heading {
   margin: 0;
   padding:20px 15px;
@@ -88,7 +89,9 @@ a, a:hover, a:focus {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="text"], .form-signin input[type="password"] {
+.form-signin input[type="text"], 
+.form-signin input[type="password"],
+.form-signin input[type="email"] {
   margin-bottom: 15px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
