--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,11 @@
- <% meta :title => "Editar mi cuenta" %>
+ <% meta :title => "Editar mi cuenta", :robots => "noindex" %>
 
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Editar mi cuenta</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :username %><br />
+  <div><%= f.label "usuario" %><br />
   <%= f.text_field :username, :autofocus => true %></div>
 
   <div><%= f.label :email %><br />
@@ -15,17 +15,20 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <div><%= f.label :password %> <i>(dejalo en blanco si no quieres cambiarlo)</i><br />
   <%= f.password_field :password, :autocomplete => "off" %></div>
 
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <div><%= f.label :current_password %> <i>(necesitas tu password actual para confirmar tus cambios)</i><br />
   <%= f.password_field :current_password %></div>
-  <div><%= f.submit "Update" %></div>
+  <div><%= f.submit "Guardar cambios" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Cancelar mi cuenta</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: {confirm: "Are you sure?" }, :method => :delete %></p>
+<p>
+  ¿insatisfecho? :(
+  <%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: {confirm: "¿Estas seguro?, todos los datos relacionados a esta cuenta serán eliminados" }, :method => :delete %>
+</p>
