--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,23 @@
- <% meta :title => "Sign up" %>
+ <% meta :title => "Sign up",
+      :description => "Registro de cuentas de usuario.",
+      :keywords => %w(signup registro),
+      :author => "geoom"
+%>
 
-<h2>Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :username %><br />
-  <%= f.text_field :username, :autofocus => true %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: "form-signin"}) do |f| %>
+  <h2 class="form-signin-heading">Nueva cuenta</h2>
+  <div class="login-wrap">
+    <p>Ingresa detalles de tu cuenta</p>
+    <%= devise_error_messages! %>
+    <%= f.text_field :username, :autofocus => true, class: "form-control", placeholder: "usuario" %>
+    <%= f.email_field :email, class: "form-control", placeholder: "email" %>
+    <%= f.password_field :password, class: "form-control", placeholder: "password" %>
+    <%= f.password_field :password_confirmation, class: "form-control", placeholder: "confirmar password" %>
+    
+    <%= f.submit "Registrar", class: "btn btn-lg btn-login btn-block" %>
+    <div class="registration">
+      ¿Ya tienes una cuenta?
+      <%= link_to "Iniciar sesión", new_user_session_path %>
+    </div>
+  </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
