--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,4 +1,46 @@
- <% meta :title => "Account page", :robots => "noindex" %>
+ <% meta :title => "#{@user.username}"%>
 
-<h1>Account</h1>
-<p><%= @user.username %></p>
+<div class="row">
+	<aside class="profile-nav col-lg-3">
+	  <section class="panel">
+	      <div class="user-heading round">
+	          <a href="#">
+	            <%= image_tag('profile_avatar_missing.png', alt: "#{@user.username}")%>
+	          </a>
+	          <h1><%= @user.username %></h1>
+	          <p><%= @user.email %></p>
+	      </div>
+
+	      <ul class="nav nav-pills nav-stacked">
+	          <li class="active">
+	          	<%= link_to(request.original_url) do %>
+								<i class="icon-user"></i> Perfil
+							<% end %>
+	          </li>
+	          <% if @is_owner %>
+		          <li>
+		          	<%= link_to(edit_user_registration_path) do %>
+									<i class="icon-edit"></i> Editar cuenta
+								<% end %>
+		          </li>
+	          <% end %>
+	      </ul>
+	  </section>
+	</aside>
+	<aside class="profile-info col-lg-9">
+	    <section class="panel">
+	        <div class="panel-body bio-graph-info">
+	            <h1>Biografía</h1>
+	            <div class="row">
+	                <div class="bio-row">
+	                    <p><span>Usuario </span>: <%= @user.username %></p>
+	                </div>
+	                <div class="bio-row">
+	                    <p><span>Email </span>: <%= @user.email %></p>
+	                </div>
+	            </div>
+	        </div>
+	    </section>
+	</aside>
+</div>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
