added friendly error pages

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -29,6 +29,7 @@
 @import "app/tabs";
 @import "app/flex-slider";
 @import "app/responsive";
+@import "app/error-page";
 
 @import "hover";
 @import "fancybox";
