fix 'template not found' issue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,6 @@
 
 		<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 
-		<%= render 'shared/_ga_script' %>
+		<%= render 'shared/ga_script' %>
 	</body>
 </html>
