new layout for news page, control on acces dashboard (login required to view single article), change production config, improve locale labels

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -400,7 +400,7 @@
     margin: -6px 2px -5px -18px;
     padding: 0px;
   }
-  h2 {
+  h1, h2 {
     display: inline-block;
     font-family: "Droid Sans" !important;
     color: #fff;
