--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,10 +17,13 @@
         <div id="footer-menu-links">
           <ul id="footer-nav">
             <li>
-              <%= link_to "About", '#' %>
+              <%= link_to "Sobre nosotros", about_path %>
             </li>
             <li>
-              <%= link_to "Contact", '#' %>
+              <%= link_to "News", news_index_path %>
+            </li>
+            <li>
+              <%= link_to "ideaStartup", ideastartup_path %>
             </li>
           </ul>
         </div>
@@ -55,14 +58,6 @@
         </p>
       </div>
       <!-- end: About -->
-
-      <!-- start: location map -->
-      <div class="span3">
-        <h3>Estamos aqu&iacute;</h3>
-        <div id="small-map-container"><a href="<?php echo URL::base(); ?>contact"></a></div>
-        <iframe id="small-map" width="210" height="210" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0" src="https://maps.google.es/maps?f=q&source=s_q&hl=es-419&geocode=&q=Universidad+Nacional+Mayor+de+San+Marcos,+Lima,+Per%C3%BA&aq=0&oq=Universidad+Nacional+Ma&sll=40.396764,-3.713379&sspn=9.75133,20.280762&ie=UTF8&hq=Universidad+Nacional+Mayor+de+San+Marcos,+Lima,+Per%C3%BA&ll=-12.056451,-77.083828&spn=0.010135,0.009152&z=14&iwloc=near&output=embed"></iframe>
-      </div>
-      <!-- end: location map  -->
 
       <div class="span6">
         <!-- start: Follow Us -->
@@ -126,38 +121,28 @@
           </li>
         </ul>
         <!-- end: Follow Us -->
-        
-                                <!-- start: Newsletter >
-                                <form id="newsletter">
-                                        <h3>Suscr&iacute;bete</h3>
-                                        <p>D&eacute;janos tu correo electr&oacute;nico para mantenerte informado.</p>
-                                        <label for="newsletter_input">@:</label>
-                                        <input type="text" id="newsletter_input"/>
-                                        <input type="submit" id="newsletter_submit" value="Listo">
-                                </form>
-                                <! end: Newsletter -->
-                              </div>
-                            </div>
-                            <!-- end: Row -->        
-                          </div>
-                          <!-- end: Container  -->
-                        </div>
-                        <!-- end: Footer -->
 
-                        <!-- start: Copyright -->
-                        <div id="copyright">
+      </div>
+    </div>
+    <!-- end: Row -->        
+  </div>
+  <!-- end: Container  -->
+</div>
+<!-- end: Footer -->
 
-                          <!-- start: Container -->
-                          <div class="container">
+<!-- start: Copyright -->
+<div id="copyright">
 
-                            <div class="span12">
-                              <p>
-                                &copy; 2013, StartupPlace
-                              </p>
-                            </div>
+  <!-- start: Container -->
+  <div class="container">
 
-                          </div>
-                          <!-- end: Container  -->
+    <div class="span12">
+      <p>
+      &copy; 2014, StartupPlace
+      </p>
+    </div>
 
-                        </div>        
+  </div>
+  <!-- end: Container  -->
+</div>        
 <!-- end: Copyright -->
