--- a/app/assets/stylesheets/app/news.css.scss
+++ b/app/assets/stylesheets/app/news.css.scss
@@ -65,10 +65,14 @@ div.newsletter div.item-description {
 
 .post-content {
   margin: 22px 0 0 0px;
+  display: inline-block;
   .post-title {
     padding-bottom: 15px;
     h1 {
       font-size: 40px;
+    }
+    h2 {
+      font-size: 26px;
     }
   }
 }
@@ -86,7 +90,6 @@ div.newsletter div.item-description {
   float: left;
   width: 70px;
   height: 70px;
-  margin-top: 30px;
 }
 
 
