--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -412,6 +412,99 @@
   }
 }
 
+
+/* About
+=================================================================== */
+
+.team-name {
+  padding: 15px 0;
+  border-bottom: 1px solid #e9e9e9;
+  margin-bottom: 15px;
+  font-family: "Droid Sans";
+  font-size: 18px;
+  text-align: center;
+  span {
+    font-size: 12px;
+    font-weight: normal;
+    color: #888;
+  }
+}
+
+.team-about p {
+  padding: 0 0 15px 0;
+  border-bottom: 1px solid #e9e9e9;
+  margin-bottom: 15px;
+}
+
+
+/* Alert Boxes
+=================================================================== */
+
+.alert {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  line-height: 18px;
+  margin-bottom: 15px;
+  position: relative;
+  padding: 14px 40px 14px 18px;
+  -webkit-box-shadow: 0px 1px 1px 0px rgba(180, 180, 180, 0.1);
+  box-shadow: 0px 1px 1px 0px rgba(180, 180, 180, 0.1);
+  &.alert-success {
+    background-color: #edf6e5 !important;
+    color: #7a9659 !important;
+    border: 1px solid #9fc76f !important;
+  }
+  &.alert-error {
+    background-color: #fdeaea !important;
+    color: #ca6f74 !important;
+    border: 1px solid #f27b81 !important;
+  }
+  background-color: #fffee1 !important;
+  color: #daac50 !important;
+  border: 1px solid #f5c056 !important;
+  &.alert-info {
+    background-color: #e9f8ff !important;
+    color: #5d9fa9 !important;
+    border: 1px solid #75c7d3 !important;
+  }
+}
+
+/* Quotes
+=================================================================== */
+
+.quotes {
+  background: #fff;
+  padding: 3px;
+  border: 1px solid #fcfcfc;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+  font-family: "Boogaloo";
+}
+
+.quote {
+  line-height: 28px;
+  font-size: 24px;
+  padding: 15px;
+  color: #fff;
+  font-family: "Boogaloo";
+}
+
+.author {
+  line-height: 28px;
+  font-size: 24px;
+  padding: 15px;
+  color: #fff;
+  font-family: "Boogaloo";
+  font-size: 14px;
+  text-align: center;
+}
+
+.quote, .author {
+  background: #29a9df;
+}
+
+
+
 /* Progress Bar
 =================================================================== */
 
@@ -564,6 +657,7 @@ li.current {
   width: 54px;
   height: 54px;
 }
+
 
 /* Page errors 
 ============================================*/
