--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
   meta [:property => "og:description", :content => "En StartupPlace te guiamos en la busca del éxito como emprendedor. Atrévete a innovar e iniciar la aventura como emprendedor."]
   meta [:property => "og:type", :content => "website"]
   meta [:property => "og:url", :content => "#{request.original_url}"]
-  meta [:property => "og:image", :content => image_url('logotype.png')]
+  meta [:property => "og:image", :content => image_url('large-sp-logotype.png')]
   meta [:property => "fb:page_id", :content => "365738726854197"]
   meta [:property => "fb:admins", :content => "100001120638005"]
 %>
