--- a/app/views/static_pages/ideastartup.html.erb
+++ b/app/views/static_pages/ideastartup.html.erb
@@ -69,7 +69,7 @@
 					<div class="post-content">
 						<div class="post-description">
 							<p>
-								<ul class="event_post star_list_event">
+								<ul class="event_post">
 									<li>
 										Aprender todo sobre el entorno de startup: conoce que esta pasando en el mundo y el Per&uacute; sobre emprendimiento, y porque las Startup es la mejor opci&oacute;n para levantar empresas en internet.
 									</li>
