--- a/app/assets/stylesheets/app/tabs.css.scss
+++ b/app/assets/stylesheets/app/tabs.css.scss
@@ -2,77 +2,77 @@
 /* Tabs
 =================================================================== */
 
-.tabs-nav {
-  list-style: none;
-  margin: 0;
-  overflow: hidden;
-  padding: 0;
-  width: 100%;
-  li {
-    float: left;
-    line-height: 34px;
-    overflow: hidden;
-    padding: 0;
-    position: relative;
-    margin: 0 0 -1px 0;
-    a {
-      background-color: #fcfcfc;
-      border: 1px solid #f6f6f6;
-      border-right: none;
-      border-bottom: 1px solid #f6f6f6;
-      color: #888;
-      display: block;
-      letter-spacing: 0;
-      outline: none;
-      padding: 0 10px;
-      text-decoration: none;
-      white-space: nowrap;
-      overflow: hidden !important;
-      text-overflow: ellipsis;
-    }
-  }
-}
+// .tabs-nav {
+//   list-style: none;
+//   margin: 0;
+//   overflow: hidden;
+//   padding: 0;
+//   width: 100%;
+//   li {
+//     float: left;
+//     line-height: 34px;
+//     overflow: hidden;
+//     padding: 0;
+//     position: relative;
+//     margin: 0 0 -1px 0;
+//     a {
+//       background-color: #fcfcfc;
+//       border: 1px solid #f6f6f6;
+//       border-right: none;
+//       border-bottom: 1px solid #f6f6f6;
+//       color: #888;
+//       display: block;
+//       letter-spacing: 0;
+//       outline: none;
+//       padding: 0 10px;
+//       text-decoration: none;
+//       white-space: nowrap;
+//       overflow: hidden !important;
+//       text-overflow: ellipsis;
+//     }
+//   }
+// }
 
-.ie7 .tabs-nav li a {
-  height: 35px;
-}
+// .ie7 .tabs-nav li a {
+//   height: 35px;
+// }
 
-.tabs-nav li {
-  &:first-child a {
-    border-left: 1px solid #f6f6f6;
-  }
-  &:last-child a {
-    border-right: 1px solid #f6f6f6;
-  }
-  &.active a {
-    color: #444;
-    font-weight: bold;
-    i {
-      opacity: 1;
-      filter: alpha(opacity = 100);
-      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-    }
-  }
-  i {
-    opacity: 0.5;
-    filter: alpha(opacity = 50);
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-  }
-  a:hover {
-    background: #fff;
-  }
-  &.active a {
-    background: #fff;
-    border-bottom: 2px solid #fff;
-  }
-}
+// .tabs-nav li {
+//   &:first-child a {
+//     border-left: 1px solid #f6f6f6;
+//   }
+//   &:last-child a {
+//     border-right: 1px solid #f6f6f6;
+//   }
+//   &.active a {
+//     color: #444;
+//     font-weight: bold;
+//     i {
+//       opacity: 1;
+//       filter: alpha(opacity = 100);
+//       -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+//     }
+//   }
+//   i {
+//     opacity: 0.5;
+//     filter: alpha(opacity = 50);
+//     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+//   }
+//   a:hover {
+//     background: #fff;
+//   }
+//   &.active a {
+//     background: #fff;
+//     border-bottom: 2px solid #fff;
+//   }
+// }
 
-.tabs-container {
-  border: 1px solid #f6f6f6;
-  margin: -1px 0 20px;
-  overflow: hidden;
-  width: 100%;
-  line-height: 19px;
-  -webkit-box-shadow: 0px 1px 1px 0px rgba(180, 180, 180, 0.1);
-  box-shadow: 0px 1px 1px 0px rgba(180, 180, 180, 0.1);
-}
+// .tabs-container {
+//   border: 1px solid #f6f6f6;
+//   margin: -1px 0 20px;
+//   overflow: hidden;
+//   width: 100%;
+//   line-height: 19px;
+//   -webkit-box-shadow: 0px 1px 1px 0px rgba(180, 180, 180, 0.1);
+//   box-shadow: 0px 1px 1px 0px rgba(180, 180, 180, 0.1);
+// }
