--- a/app/views/dashboard/news/edit.html.erb
+++ b/app/views/dashboard/news/edit.html.erb
@@ -2,4 +2,4 @@
 
 <h1>Edit an News</h1>
 
-<%= render partial: 'form', locals: { url_into: dashboard_news_path(@news) } %>
+<%= render partial: 'form', locals: { url_into: dashboard_news_path(@news), action_label: 'Guardar cambios' } %>
