--- a/app/views/dashboard/news/new.html.erb
+++ b/app/views/dashboard/news/new.html.erb
@@ -1,3 +1,3 @@
  <% meta :title => "Nuevo artículo", :robots => "noindex" %>
 
-<%= render partial: 'form', locals: { url_into: dashboard_news_index_path} %>
+<%= render partial: 'form', locals: { url_into: dashboard_news_index_path, action_label: 'Publicar árticulo'} %>
