set to large logo to twiter card by tagmeta and fix layout to tags feed news

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -22,7 +22,7 @@ meta [:property => "twitter:card", :content => "summary"]
 meta [:property => "twitter:url", :content => "#{request.original_url}"]
 meta [:property => "twitter:title", :content => "Startupplace | Red universitaria de emprendedores e innovadores tecnológicos en internet."]
 meta [:property => "twitter:description", :content => "En StartupPlace te guiamos en la busca del éxito como emprendedor. Atrévete a innovar e iniciar la aventura como emprendedor."]
-meta [:property => "twitter:image", :content => image_url('logotype.png')]
+meta [:property => "twitter:image", :content => image_url('large-sp-logotype.png')]
 %>
 <!-- /Twiter cards -->
 
