--- a/app/views/static_pages/ideastartup.html.erb
+++ b/app/views/static_pages/ideastartup.html.erb
@@ -22,7 +22,7 @@
   meta [:property => "twitter:url", :content => "#{request.original_url}"]
   meta [:property => "twitter:title", :content => "ideaStartup"]
   meta [:property => "twitter:description", :content => "Programa de desarrollo para emprendedores tecnológicos de StartupPlace."]
-  meta [:property => "twitter:image", :content => image_url('logotype.png')]
+  meta [:property => "twitter:image", :content => image_url('large-sp-logotype.png')]
 %>
 <!-- /Twiter cards -->
 
