--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,6 +10,9 @@ meta [:property => "og:title", :content => "Startupplace | Red universitaria de 
 meta [:property => "og:description", :content => "En StartupPlace te guiamos en la busca del éxito como emprendedor. Atrévete a innovar e iniciar la aventura como emprendedor."]
 meta [:property => "og:type", :content => "website"]
 meta [:property => "og:url", :content => "#{request.original_url}"]
+meta [:property => "og:image", :content => image_url('flex-slider/slider1.jpg')]
+meta [:property => "og:image", :content => image_url('flex-slider/slider2.jpg')]
+meta [:property => "og:image", :content => image_url('flex-slider/slider3.jpg')]
 meta [:property => "og:image", :content => image_url('large-sp-logotype.png')]
 meta [:property => "fb:page_id", :content => "365738726854197"]
 meta [:property => "fb:admins", :content => "100001120638005"]
@@ -22,6 +25,9 @@ meta [:property => "twitter:card", :content => "summary"]
 meta [:property => "twitter:url", :content => "#{request.original_url}"]
 meta [:property => "twitter:title", :content => "Startupplace | Red universitaria de emprendedores e innovadores tecnológicos en internet."]
 meta [:property => "twitter:description", :content => "En StartupPlace te guiamos en la busca del éxito como emprendedor. Atrévete a innovar e iniciar la aventura como emprendedor."]
+meta [:property => "twitter:image", :content => image_url('flex-slider/slider1.jpg')]
+meta [:property => "twitter:image", :content => image_url('flex-slider/slider2.jpg')]
+meta [:property => "twitter:image", :content => image_url('flex-slider/slider3.jpg')]
 meta [:property => "twitter:image", :content => image_url('large-sp-logotype.png')]
 %>
 <!-- /Twiter cards -->
