newsletter section on footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -58,8 +58,7 @@
         </p>
       </div>
       <!-- end: About -->
-
-      <div class="span6">
+      <div class="span4">
         <!-- start: Follow Us -->
         <h3>S&iacute;guemos</h3>
         <ul class="social-grid">
@@ -91,37 +90,19 @@
               </div>
             </div>
           </li>
-          <li>
-            <div class="social-item">                                
-              <div class="social-info-wrap">
-                <div class="social-info">
-                  <div class="social-info-front social-youtube">
-                    <a href="https://www.youtube.com/startupplace" target="_blank"></a>
-                  </div>
-                  <div class="social-info-back social-youtube-hover">
-                    <a href="https://www.youtube.com/startupplace" target="_blank"></a>
-                  </div>        
-                </div>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="social-item">                                
-              <div class="social-info-wrap">
-                <div class="social-info">
-                  <div class="social-info-front social-vimeo">
-                    <a href="http://vimeo.com/user15785241" target="_blank"></a>
-                  </div>
-                  <div class="social-info-back social-vimeo-hover">
-                    <a href="http://vimeo.com/user15785241" target="_blank"></a>
-                  </div>        
-                </div>
-              </div>
-            </div>
-          </li>
         </ul>
         <!-- end: Follow Us -->
-
+      </div>
+      <div class="span5">
+        <form id="newsletter" action="http://startupplace.us8.list-manage2.com/subscribe/post?u=f26e30404e00d54555b15130d&amp;id=06a07cea95" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <h3>Suscríbete</h3>
+          <p>Déjanos tu email para enterarte de más eventos</p>
+          <label for="newsletter_input">@:</label>
+          <input type="text" id="newsletter_input" name="EMAIL" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;"><input type="text" name="b_f26e30404e00d54555b15130d_06a07cea95" value=""></div>
+          <input type="submit" id="newsletter_submit" value="submit">
+        </form>
       </div>
     </div>
     <!-- end: Row -->        
