--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 			<script src="https://raw.github.com/scottjehl/Respond/master/dest/respond.min.js"></script>
 		<![endif]-->
+        <meta name="google-site-verification" content="nZjsIZDk-mDOK9SSDnSINIM-NIO6IXo1lOcpYnfH0gY" />
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
